@@ -77,6 +77,7 @@
 # define __FLT_PI_3_4	M_PI_3_4
 # define __FLT_MAXLOG	88.72283905206835F
 # define __FLT_MINLOG	-103.278929903431851103F
+
 # define __FLT_LOGE2	0.693147180559945309F
 # define __FLT_REPORT(NAME) NAME "f"
 #elif defined(_NEW_COMPLEX_DOUBLE)
@@ -91,7 +92,7 @@
 # define __FLT_PI_4	M_PI_4
 # define __FLT_PI_3_4	M_PI_3_4
 # define __FLT_MAXLOG	7.09782712893383996843E2
-# define __FLT_MINLOG	-7.08396418532264106224E2
+# define __FLT_MINLOG	-7.45133219101941108420E2
 # define __FLT_LOGE2	6.93147180559945309417E-1
 # define __FLT_REPORT(NAME)	NAME
 #elif defined(_NEW_COMPLEX_LDOUBLE)
@@ -106,7 +107,7 @@
 # define __FLT_PI_4	M_PI_4l
 # define __FLT_PI_3_4	M_PI_3_4l
 # define __FLT_MAXLOG	1.1356523406294143949492E4L
-# define __FLT_MINLOG	-1.13994985314888605586758E4L
+# define __FLT_MINLOG	-1.1355137111933024058873E4L
 # define __FLT_LOGE2	6.9314718055994530941723E-1L
 # define __FLT_REPORT(NAME) NAME "l"
 #else
